--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 dependencies = [
     "aprs3~=8.0",
-    "aiohttp[speedups]~=3.8",
+    "aiohttp~=3.8",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
