--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 dependencies = [
     "aprs3~=8.0",
     "aiohttp~=3.8",
+    "asyncclick~=8.1",
+    "anyio~=3.6", # TODO: this is actually an undeclared dependency of asyncclick
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
